# Tani_Care_AI_V2

./: .firebaserc  .gcloudignore  Dockerfile  Project-Summary-for-sumbmission.md  Project_structure.md  README.md  [Participants] PROJECT2030 Official FAQs.md  [Participants] PROJECT2030 Official Handbook.md  deploy.sh  deploy_v2.sh  package-lock.json  package.json  pubspec.yaml  requirement.md  setup_vertex_search.py
.firebase/: hosting.YnVpbGRcd2Vi.cache
.genkit/servers/: tools-28884.json
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
backend/functions/: main.py  requirements.txt
backend_v2/: Dockerfile  main.py  pyproject.toml
backend_v2/.genkit/servers/: tools-31648.json
conductor/: improvements_and_data_plan.md  session_log.md
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: earth_engine_service.dart  gemini_service.dart  main.dart
lib/providers/: analytics_provider.dart  scan_provider.dart  state_provider.dart
lib/screens/: alerts_screen.dart  analytics_screen.dart  home_screen.dart  result_screen.dart  scan_screen.dart
lib/utils/: constants.dart
linux/: CMakeLists.txt
linux/runner/: my_application.cc
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner/Configs/: AppInfo.xcconfig
rag_docs/: mygap_guidelines.txt  paddy_diseases_guide.txt  pesticides_act_1974_summary.txt
test/: widget_test.dart
vertex_agent_config/: SETUP_GUIDE.md
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/runner/: Runner.rc  main.cpp
(+2 files in other folders)
