[project]
name = "tanicare-backend-genkit"
version = "0.1.0"
description = "TaniCare AI Genkit Backend for Google Cloud Run"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn>=0.30.1",
    "genkit>=0.0.1",
    "google-genai>=0.1.2",
    "earthengine-api>=0.1.400",
    "requests>=2.32.0",
    "google-cloud-discoveryengine>=0.11.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
