[project]
name = "tanicare-backend-genkit"
version = "2.0.0"
description = "TaniCare AI Multi-Agent Backend for Google Cloud Run"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.1",
    "google-genai>=1.0.0",
    "google-cloud-discoveryengine>=0.11.2",
    "google-cloud-aiplatform>=1.48.0",
    "requests>=2.32.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
